# mcp-local-llm-cli

./: README.md  main.py  mcp_client.py  mcp_server.py  pyproject.toml  tool_agent.py
app.egg-info/: PKG-INFO  requires.txt
core/: claude.py  cli_chat.py
